[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "spreen-tracks"
version = "0.1.0"
description = "Normalise iTunes-imported track filenames with a configurable delimiter and DiscN folders."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "hayat01sh1da" }]
requires-python = ">=3.10"
keywords = ["itunes", "apple-music", "music", "filename", "rename", "delimiter", "disc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/hayat01sh1da/spreen-tracks"
Source = "https://github.com/hayat01sh1da/spreen-tracks"
Changelog = "https://github.com/hayat01sh1da/spreen-tracks/blob/master/CHANGELOG.md"

[project.scripts]
track-delimiter = "spreen_tracks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spreen_tracks = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
